<resources>
    <string name="app_name">Transportes Bahía de Cádiz</string>
    <string name="main">Principal</string>
    <string name="trip">Realizar viaje</string>
    <string name="lines">Mapa de líneas</string>
    <string name="cards">Mis tarjetas</string>
    <string name="sales">Puntos de venta</string>
    <string name="gap_fare">Saltos y tarifas</string>
    <string name="gap">Saltos</string>
    <string name="fare">Tarifas</string>
    <string name="interest">Zonas de interés</string>
    <string name="login">Acceder/Registrarse</string>
    <string name="settings">Ajustes</string>
    <string name="me">Yo</string>
    <string name="about">Acerca de</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="search_hint">Introduzca código o nombre de parada</string>
    <string name="fare_system">Zonas del sistema tarifario</string>
    <string name="location_title">Seleccione una posición para su localización</string>
    <string name="select_location">Seleccione una dirección</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="origin_city">Municipio origen</string>
    <string name="destiny_city">Municipio destino</string>
    <string name="origin_centre">Núcleo origen</string>
    <string name="destiny_centre">Núcleo destino</string>
    <!--<string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCG8b65kHX5KO5JlD_KK2wdwiPPYcmzTaQ</string>-->
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="password_again">Repita contraseña</string>
    <string name="log_in">Iniciar sesión</string>
    <string name="sign_up">Registrarse</string>
    <string name="email">Correo electrónico</string>
    <string name="phone">Teléfono</string>
    <string name="terms">Acepto los términos y las condiciones de uso</string>
    <string name="line">Línea</string>
    <string name="stops">Paradas</string>
    <string name="frequency">Frecuencia</string>
    <string name="btn_search_trip">Buscar viaje</string>
    <string name="btn_pay_trip">Pagar viaje</string>
    <string name="everyday_card">Tarjeta estándar</string>
    <string name="retired_card">Tarjeta jubilados</string>
    <string name="student_card">Tarjeta estudiante</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="exit">Cerrar sesión</string>
    <string name="born_date">Fecha nacimiento</string>
    <string name="new_credit_card">Nueva tarjeta</string>
    <string name="correct">Correcto</string>
    <string name="incorrect">Incorrecto</string>
    <string name="incorrect_message">No se pudo completar la operación</string>
    <string name="invalid">Inválido</string>
    <string name="deleteCard">Borrar tarjeta</string>
    <string name="textDeleteCard">¿Está seguro de querer borrar la tarjeta?</string>
    <string name="money">Saldo</string>
    <string name="pay">Pagar</string>
    <string name="reload">Recargar tarjeta</string>
    <string name="attention">Atención</string>
    <string name="payment_instruction">Ponga el dispositivo hacia abajo para realizar el pago</string>
    <string name="no_money">Para utilizar la tarjeta, debe tener saldo</string>
    <string name="insert_quantity">Introduzca cantidad para la recarga</string>
    <string name="no_user">Debe iniciar sesión para ver sus datos</string>
    <string name="centre">Núcleo</string>
    <string name="change_image">Cambiar imágen</string>
    <string name="camera">Elegir foto existente</string>
    <string name="existing_photo">Tomar foto</string>
</resources>
