<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_everyday_card"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_border"
            android:paddingTop="50dp"
            android:text="@string/everyday_card"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text_view_retired_card"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_border"
            android:paddingTop="50dp"
            android:text="@string/retired_card"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text_view_student_card"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_border"
            android:paddingTop="50dp"
            android:text="@string/student_card"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="30sp"></TextView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>