<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:text="@string/origin_city"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner_origin_city"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:text="@string/destiny_city"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner_destiny_city"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:text="@string/origin_centre"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner_origin_centre"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:text="@string/destiny_centre"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner_destiny_centre"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20sp" />
        </LinearLayout>
    </LinearLayout>

    <TableLayout
        android:id="@+id/tablaParadas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">

    </TableLayout>
</LinearLayout>