<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingTop="30dp"
    android:paddingRight="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text_view_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text=""
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text_view_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text=""
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/born_date"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text_view_born_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text=""
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text_view_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text=""
            android:textSize="30sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/rounded_button"
                android:text="@string/change_password"
                android:textColor="@android:color/white" />

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="30dp"
                android:background="@drawable/rounded_border"
                android:text="cerrar sesión"
                android:textColor="@android:color/holo_blue_light" />
        </RelativeLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>