<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20sp"
                    android:text="@string/origin_city"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spinner_origin_city"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20sp"
                    android:text="@string/destiny_city"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spinner_destiny_city"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20sp"
                    android:text="@string/origin_centre"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spinner_origin_centre"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20sp"
                    android:text="@string/destiny_centre"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spinner_destiny_centre"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_search_trip"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:text="@string/btn_search_trip"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
        <!--<de.codecrafters.tableview.TableView
            android:id="@+id/table_view_horarios"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>-->
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/bottom_sheet_stops"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:behavior_peekHeight="55dp"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <TextView
            android:id="@+id/text_view_lines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>