<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.GapFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/origin_centre"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner_gap_origin_centre"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/destiny_centre"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner_gap_destiny_centre"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="130dp"
        android:text="@string/gap"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/text_view_gap"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="230dp"
        android:text="saltitos"
        android:textSize="15sp"/>
</RelativeLayout>